# pine

./: .gitignore  .gitmodules  API.pine  CMakeLists.txt  README.md  TODO  grammar.txt  main.py  mis.pine  optimal_mis.cpp  t --count  test.py
scenes/: benchmark.c  benchmark.pine  benchmark.py  cbox-indirect.pine  cbox.glb  cbox.pine  class-lambda.pine  classic.pine  cloud.pine  control-flow.pine  culumus.pine  dispersion.pine  explosion.pine  fragment.pine  house.pine  introduction.pine  math.pine  minimal.pine  pine.pine  planet.pine  scene.py  sdf.pine  sss.pine  sss1.pine  storm.pine  usd.pine
scenes/house/: house.glb.import  house_Glass texture.jpg.import  house_Roof Texture 2.jpg.import  house_house_Texture 8.jpg.import  house_laminate_floor_03_diff_2k.jpg.import
shaders/: basic.frag  basic.vert  camera.frag  compute.comp  constants.frag  geometry.frag  integrator.frag  mrgi.frag  mrgi_debug.frag  path.frag  path.frag.esl  path.vert  ray.frag  sampler.frag  sampling.frag
src/cli/: gltf-tool.cpp  image-tool.cpp  main.cpp  pine-repl.cpp  pine.cpp  pine_test.cpp
src/contrib/: tiny_gltf.h
src/contrib/assimp/contrib/clipper/: clipper.cpp
src/contrib/assimp/contrib/zlib/: inflate.c
src/contrib/bluesobol/: CITATION.txt  bluenoise_128spp.cpp  bluenoise_16spp.cpp  bluenoise_1spp.cpp  bluenoise_256spp.cpp  bluenoise_2spp.cpp  bluenoise_32spp.cpp  bluenoise_4spp.cpp  bluenoise_64spp.cpp  bluenoise_8spp.cpp
src/contrib/drjit/: CMakeLists.txt
src/contrib/drjit/ext/drjit-core/: CMakeLists.txt
src/contrib/drjit/ext/drjit-core/ext/nanothread/: CMakeLists.txt
src/contrib/drjit/ext/drjit-core/ext/nanothread/ext/cmake-defaults/: _CMakeLists.txt
src/contrib/drjit/ext/drjit-core/ext/nanothread/src/: queue.cpp
src/contrib/drjit/ext/drjit-core/src/: init.cpp  llvm_core.cpp
src/contrib/drjit/include/drjit/: vcall_packet.h
src/contrib/embree/: CMakeLists.txt
src/contrib/embree/common/cmake/: check_globals.cmake  package.cmake
src/contrib/embree/common/sys/: platform.h
src/contrib/embree/include/embree4/: rtcore_config.h
src/contrib/embree/kernels/: CMakeLists.txt  config.h
src/contrib/embree/kernels/level_zero/: ze_api.h
src/contrib/nanovdb/: NanoVDB.h
src/contrib/nanovdb/util/: IO.h  NodeManager.h
src/contrib/zlib/: CMakeLists.txt
src/core/: camera.cpp  camera.hpp  check.cpp  check.hpp  color.cpp  color.hpp  image.cpp  image.hpp  integrator.cpp  integrator.hpp  intersection.cpp  intersection.hpp  logging.cpp  logging.hpp  material.cpp  math.hpp  parallel.hpp  python.cpp  ray.cpp  ray.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shapes.cpp  shapes.hpp  string.hpp  testing.cpp  testing.hpp  timer.hpp
src/ext/assimp/: CMakeLists.txt
src/ext/assimp/code/Common/: Maybe.h
src/pine/core/: aabb.cpp  aabb.h  accel.cpp  accel.h  array.cpp  array.h  atomic.h  bbox.cpp  bbox.h  blackbody.cpp  blackbody.h  bxdf.cpp  bxdf.h  camera.cpp  camera.h  color.cpp  color.h  compiler.cpp  compiler.h  context.cpp  context.h  defines.h  denoise.cpp  denoise.h  distribution.cpp  distribution.h  earley.cpp  earley.h  esl.cpp  esl.h  fileio.cpp  fileio.h  film.cpp  film.h  float.h  geometry.cpp  geometry.h  grammar.cpp  grammar.h  gui.cpp  (+62 more)
src/pine/impl/accel/: bvh.cpp  bvh.h  embree.cpp  embree.h
src/pine/impl/integrator/: ao.cpp  ao.h  cachedpath.cpp  cachedpath.h  denoiser.cpp  denoiser.h  diffuse_filtered_path.cpp  diffuse_filtered_path.h  drjit.cpp  drjit.h  ears.cpp  ears.h  filteredpath.cpp  filteredpath.h  guidedpath.cpp  guidedpath.h  micro_render.cpp  micro_render.h  mlt.cpp  mlt.h  path-openpgl.cpp  path-openpgl.h  path.cpp  path.h  path_opengl.cpp  path_opengl.h  randomwalk.cpp  randomwalk.h  restir.cpp  restir.h  single-bounce.cpp  single-bounce.h  single-bound.cpp  single-bound.h  spatial_tree.cpp  spatial_tree.h  visualizer.cpp  visualizer.h  vol.cpp  vol.h  (+2 more)
src/pine/psl/: algorithm.h  array.h  check.cpp  check.h  chrono.cpp  chrono.h  fstream.cpp  fstream.h  iostream.cpp  iostream.h  limits.h  map.h  math.h  memory.cpp  memory.h  new.h  optional.h  span.h  stdint.h  string.cpp  string.h  system.cpp  system.h  type_traits.h  unordered_map.h  utility.h  variant.h  vector.h
src/psl/: algorithm.h  check.cpp  check.h  chrono.cpp  fstream.cpp  fstream.h  function.h  map.h  math.h  memory.cpp  memory.h  optional.h  span.h  stdint.h  string.cpp  string.h  system.cpp  system.h  type_traits.h  unordered_map.h  utility.h  variant.h  vector.h
src/tests/: math.cpp
test/: path_opengl_test.cpp  pine_test.cpp  psl_test.cpp
